# gettextdemo

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  gettextdemo.c  run-me.sh
po/: LINGUAS  POTFILES.in  cs.po  de.po  de_AT.po
